Under intro_to_python, modified intro_to_python_02-arrays_plotting_data_loops.ipynb to fix some   typos.

--- a/intro_to_python/intro_to_python_02-arrays_plotting_data_loops.ipynb
+++ b/intro_to_python/intro_to_python_02-arrays_plotting_data_loops.ipynb
@@ -157,7 +157,7 @@
    "source": [
     "### Additional material to cover on your own and at your own pace\n",
     "\n",
-    "You might want to continue exploring some of the embedded functions/methods that are available whe working with __*NumPy*__ arrays. I suggest trying the following:\n",
+    "You might want to continue exploring some of the embedded functions/methods that are available when working with __*NumPy*__ arrays. I suggest trying the following:\n",
     "- retrieving the mean/average value of the elements in the array,\n",
     "- retrieving the standard deviation value of the elements in the array,\n",
     "- accessing a custom range of elements (e.g., more than more element at a time)."
@@ -569,7 +569,7 @@
     "\n",
     "### Additional material to cover on your own and at your own pace\n",
     "\n",
-    "You might want to continue exploring some of the embedded functions/methods that are available whe working with __*Matplotlib*__. I suggest trying the following:\n",
+    "You might want to continue exploring some of the embedded functions/methods that are available when working with __*Matplotlib*__. I suggest trying the following:\n",
     "- change the marker type used for the lift and drag forces (e.g., a star for lift and a cross for the drag),\n",
     "- change the line style/colour used for the lift and drag forces (e.g., interrupted line for lift/dotted line for the drag, black colour line for lift/ red colour line for drag),\n",
     "- change the plot limits of the X/Y-axes."
